train_type_new